# py-lab-hal

./: .gitignore  README.md  build.sh  proto.sh  pyproject.toml  requirements.txt  setup.py  tox.ini
demo/: board_client.py  board_server.py  demo.py  demo_data_logger.py  demo_power_on_off.py
demo/instrument/: demo_arch.py  demo_color_meter.py  demo_daq.py  demo_dcpsu.py  demo_dexarm.py  demo_dmm.py  demo_eload.py  demo_func_gen.py  demo_light.py  demo_monsoon.py  demo_relay.py  demo_remote_power_switch.py  demo_scope.py  demo_spectro_radio_meter.py  demo_temp_chamber.py  demo_throlab.py
py_lab_hal/: __init__.py  builder.py  scan.py
py_lab_hal/cominterface/: __init__.py  acute.py  cominterface.py  debug.py  dmx.py  hislip.py  http.py  pyhalboard.py  pylabhalboard.py  serial.py  socket.py  usb.py  usbmonsoon.py  usbtmc.py  visa.py  vxi11.py
py_lab_hal/data_logger/: __init__.py  data_logger.py  test_logger.py
py_lab_hal/datagram/: __init__.py  datagram.py
py_lab_hal/datagrame/: __init__.py  datagrame.py
py_lab_hal/environment/: __init__.py  py_lab_hal_env.py  pyhal_env.py
py_lab_hal/instrument/: __init__.py  instrument.py
py_lab_hal/instrument/ac_pa/: __init__.py  ac_pa.py
py_lab_hal/instrument/acpsu/: __init__.py  acpsu.py
py_lab_hal/instrument/arm/: __init__.py  arch.py  arm.py  dexarm.py
py_lab_hal/instrument/battery_emulator/: __init__.py  battery_emulator.py  keysight_663xxx.py  keysight_n6705c.py
py_lab_hal/instrument/color_meter/: admesy_hyperion.py  color_meter.py
py_lab_hal/instrument/common/: __init__.py
py_lab_hal/instrument/common/keysight/: __init__.py  keysight_dmm.py  keysight_n6705c.py
py_lab_hal/instrument/dcpsu/: __init__.py  aimtticpx_4000dp.py  dcpsu.py  gwin_pst3202.py  keysight_e36300_series.py  keysight_e3630_series.py  keysight_n6705c.py
py_lab_hal/instrument/dmm/: __init__.py  agilent_34410a.py  agilent_34465a.py  dmm.py  keysight_34970a.py
py_lab_hal/instrument/eload/: __init__.py  bk_8500b.py  chroma_63600.py  eload.py  keysight_n6705c.py  plz_205w.py
py_lab_hal/instrument/function_generator/: __init__.py  function_generator.py  keysight_n33500b.py
py_lab_hal/instrument/light/: __init__.py  arri_s120.py  light.py
py_lab_hal/instrument/powermeter/: __init__.py  monsoon.py  powermeter.py
py_lab_hal/instrument/relay/: __init__.py  relay.py  tigertail.py  usbrelay.py
py_lab_hal/instrument/remote_power_switch/: __init__.py  digipdu_zdhx.py  remote_power_switch.py  web_power_switch.py
py_lab_hal/instrument/scope/: __init__.py  acute_mso3000x.py  keysight_4000x_series.py  keysight_s_series.py  lecroy_maui.py  scope.py  tektronix_mso.py
py_lab_hal/instrument/smu/: __init__.py  keysight_n6705c.py  smu.py
py_lab_hal/instrument/spectro_radio_meter/: __init__.py  jadak_pr670.py  konica_cs3000.py  spectro_radio_meter.py
py_lab_hal/instrument/stepper_motor/: stepper_motor.py  thorlabs_hdr50.py
py_lab_hal/instrument/temp_chamber/: __init__.py  giant.py  pu3j.py  temp_chamber.py  testequity_107.py
py_lab_hal/logger/: __init__.py  logger.py
py_lab_hal/proto/: datagrame.proto  datagrame_pb2.py  datagrame_pb2.pyi  datagrame_pb2_grpc.py  py_lab_hal.proto  py_lab_hal_pb2.py  py_lab_hal_pb2.pyi  py_lab_hal_pb2_grpc.py  pyhal.proto  pyhal_pb2.py  pyhal_pb2.pyi  pyhal_pb2_grpc.py
py_lab_hal/proto/cominterface/: aqvisa.proto  aqvisa_pb2.py  aqvisa_pb2.pyi  aqvisa_pb2_grpc.py
py_lab_hal/py_lab_hal_board_client/: __init__.py  client_agent.py
py_lab_hal/py_lab_hal_board_server/: __init__.py  py_lab_hal_server.py  server_agent.py
py_lab_hal/pyhal_board_client/: __init__.py  client_agent.py
py_lab_hal/pyhal_board_server/: __init__.py  pyhal_server.py
py_lab_hal/util/: __init__.py  json_dataclass.py  proto_util.py  util.py
tests/integration/: test_scope.py
tests/unit/dcpsu/: test_gwinpst3202.py  test_keysighte3632a.py  test_keysighten6705c.py
tests/unit/dmm/: test_agilent34410a.py  test_agilent34465a.py  test_keysight34970a.py
tests/unit/relay/: test_usbrelay.py
tests/unit/scope/: test_lecroy_maui.py  test_tektronix_mso456.py
